feat: start development of worklist findrequest to mongodb

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 #dcmqrscpMongoDB/dcmtk-3.6.7/dcmimgle/libsrc/dcmimgle.dir/Debug/
 #dcmqrscpMongoDB/dcmtk-3.6.7/dcmsr/libsrc/dcmsr.dir/Debug/
 dcmqrscpMongoDB/
+Export/wlmdump2mongodb/node_modules/
