--- a/CMakeSource/dcmtk-3.6.7/dcmqrdb/apps/CMakeLists.txt
+++ b/CMakeSource/dcmtk-3.6.7/dcmqrdb/apps/CMakeLists.txt
@@ -7,3 +7,4 @@ endforeach()
 foreach(PROGRAM dcmqrscp dcmqridx dcmqrti)
   DCMTK_TARGET_LINK_MODULES(${PROGRAM} dcmqrdb dcmnet dcmdata oflog ofstd)
 endforeach()
+target_link_libraries(dcmqrscp bson_static mongoc_static)
