--- a/CMakeSource/dcmtk-3.6.7/dcmwlm/apps/CMakeLists.txt
+++ b/CMakeSource/dcmtk-3.6.7/dcmwlm/apps/CMakeLists.txt
@@ -6,3 +6,5 @@ DCMTK_ADD_EXECUTABLE(wlmscpfs wlmscpfs.cc wlcefs.cc)
 
 # make sure executables are linked to the corresponding libraries
 DCMTK_TARGET_LINK_MODULES(wlmscpfs dcmwlm dcmnet dcmtls dcmdata oflog ofstd)
+
+target_link_libraries(wlmscpfs bson_static mongoc_static)
