--- a/CMakeSource/dcmtk-3.6.7/dcmwlm/libsrc/CMakeLists.txt
+++ b/CMakeSource/dcmtk-3.6.7/dcmwlm/libsrc/CMakeLists.txt
@@ -7,3 +7,4 @@ DCMTK_ADD_LIBRARY(dcmwlm
 )
 
 DCMTK_TARGET_LINK_MODULES(dcmwlm ofstd dcmdata dcmnet)
+target_link_libraries(dcmwlm bson_static mongoc_static)
